# four-code

./: .gitignore  CLAUDE.md  Cargo.toml  HISTORY.md  Makefile  README.md  clippy.toml  rustfmt.toml
.cargo/: config.toml
crates/four-code/: Cargo.toml
crates/four-code-clipboard/: Cargo.toml
crates/four-code-clipboard/src/: lib.rs
crates/four-code-core/: Cargo.toml
crates/four-code-core/src/: buffer.rs  cursor.rs  editor.rs  lib.rs
crates/four-code-highlight/: Cargo.toml
crates/four-code-highlight/src/: highlighter.rs  languages.rs  lib.rs
crates/four-code-tui/: Cargo.toml
crates/four-code-tui/src/: app.rs  editor.rs  lib.rs
crates/four-code/src/: main.rs
docs/: ARCHITECTURE.md  ROADMAP.md
