[package]
name = "four-code-highlight"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Syntax highlighting for four-code using tree-sitter"

[dependencies]
# Tree-sitter core
tree-sitter.workspace = true
tree-sitter-highlight.workspace = true

# Language grammars (PHP-first, then common web languages)
tree-sitter-php.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-json.workspace = true
tree-sitter-html.workspace = true
tree-sitter-css.workspace = true
tree-sitter-yaml.workspace = true
tree-sitter-toml-ng.workspace = true
tree-sitter-bash.workspace = true
tree-sitter-md.workspace = true
tree-sitter-rust.workspace = true

# UI
ratatui.workspace = true

# Error handling
thiserror.workspace = true
